--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -1,3 +1,8 @@
-/* checkout.css -  */
-/* Checkout page styling goes here */
-
+/* checkout.css - Styling for the checkout page */
+/* Styles specific to checkout page (checkout.hmtl) */
+/* Form layout for billing and shipping information */
+/* Payment section styling (credit card inputs, payment options)*/
+/* Call-to-action buttons or completing the order */
+/* Error states and validation messages */
+/* Responvie layout for mobile and desktop views */
+/* Write your code below */
