--- a/styles/car-details.css
+++ b/styles/car-details.css
@@ -7,3 +7,15 @@
 /* Related cars/recommendations section*/
 /* Responsive layout for mobile and desktop views */
 /* Wrte your code below */
+/* GLOBAL */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Poppins", Arial, sans-serif;
+    background-color: #0f0f0f;
+    color: #e5e5e5;
+}
