--- a/styles/cars.css
+++ b/styles/cars.css
@@ -6,3 +6,15 @@
 /* Favotite buttons and hover effects on car cards*/
 /* Responsive adjustments (sidebar stacking , grid changes)*/
 /* Write your code below */
+/* GLOBAL */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Poppins", Arial, sans-serif;
+    background-color: #0f0f0f;
+    color: #e5e5e5;
+}
