--- a/styles/cart.css
+++ b/styles/cart.css
@@ -4,3 +4,15 @@
 /* Style buttons for "Proceed to checkout" and "Continue Shopping"*/
 /* Add responsivenss for mobile and desktop views*/
 /*Write your code below */
+/* GLOBAL */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Poppins", Arial, sans-serif;
+    background-color: #0f0f0f;
+    color: #e5e5e5;
+}
