--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -6,3 +6,15 @@
 /* Error states and validation messages */
 /* Responvie layout for mobile and desktop views */
 /* Write your code below */
+/* GLOBAL */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Poppins", Arial, sans-serif;
+    background-color: #0f0f0f;
+    color: #e5e5e5;
+}
