--- a/styles/index.css
+++ b/styles/index.css
@@ -5,3 +5,15 @@
 /* Defines variables (colors,spacing,border-radius,shadows) base styles (body,headings , buttons , links), and layout utilities (containers,grids)
 /* Ensures consistent design lnguage across the website */
 /* Write your code below */
+/* GLOBAL */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Poppins", Arial, sans-serif;
+    background-color: #0f0f0f;
+    color: #e5e5e5;
+}
