--- a/styles/cars.css
+++ b/styles/cars.css
@@ -15,6 +15,27 @@
 
 body {
     font-family: "Poppins", Arial, sans-serif;
-    background-color: #0f0f0f;
+    background-color: #000000;
+    color: #FFFFFF;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #FFD700;
+}
+
+p {
+    color: #FFFFFF;
+}
+
+li, span, div, section, article {
+    color: #FFFFFF;
+}
+
+a {
     color: #e5e5e5;
+    transition: color 0.3s ease;
+}
+
+a:hover {
+    color: #FFD700;
 }
