--- a/styles/about.css
+++ b/styles/about.css
@@ -9,6 +9,7 @@ body {
     font-family: "Poppins", Arial, sans-serif;
     background-color: #0f0f0f;
     color: whitesmoke
+}
 
 /* NAVIGATION */
 .navbar {
